# Digittatern

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
test/: threshold_test.cpp
